--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
-  "name": "application",
-  "private": true,
+  "name": "mui-component-application-mrpaulwoods",
+  "private": false,
   "version": "0.0.0",
+  "author": "Paul Woods <mr.paul.woods@gmail.com> (https://www.github.com/mrpaulwoods/)",
   "type": "module",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/paulwoods/npm-application.git"
+  },
   "scripts": {
-    "application": "vite",
+    "npm-application": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
