--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fontsource/roboto": "^5.0.13",
     "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.15.19",
+    "mui-component-library-mrpaulwoods": "^0.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
